--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	</head>
 	<body> 
 		<form id="main" action="#"> 
-			<textarea name="list"> 
-			</textarea> 
+			<textarea name="list"></textarea> 
 			<input type="number" id="many"> 
 			<input type="button" onclick="run()" value="run"> 
 		</form> 
