Try running on submission

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<script type='text/javascript' src="./randomizer.js" ></script>  
 	</head>
 	<body> 
-		<form id="main" action="#"> 
+		<form onsubmit="return run()" id="main" action="#"> 
 			<textarea name="list"> 
 			</textarea> 
 			<input type="number" id="many"> 
